test/end-to-end/runnable/infer-type-args-from-lambda-explicit-type.crow
import
	crow/io/print: out, print

main void() summon
	a = () sum-by (x nat) => x
	b = ("foo", "bar") sum-by (s symbol) => s.to::string.size
	out print "a: {a}, b: {b}"

sum-by[t] nat(a t[], f nat mut(x t))
	res mut nat = 0
	for x : a
		res +:= f[x]
	res
