test/end-to-end/compile-errors/unused.crow
import
	# unused fun
	crow/io/duration: sec
	# unused type
	crow/io/time-format: time-locale
	# unused type alias
	system/unistd: ssize_t
	# unused spec
	crow/col/collection: begin-end
	# unused module
	crow/io/process

main void()
	info log "done"

foo[t] void(p nat, _ string)
	_ void mut(x nat) = x => ()
	_ void mut(x nat) = _ => ()
	y nat = 2
	()

-bar[t] void() t compare
	()

-r record mut
	r0 -mut nat

-u union
	u0 nat

-a alias
	nat

-e enum
	e0

-f flags
	f0

-s spec
	foo void()
